# lewidi2025

./: .gitignore  Makefile  README.md  explore.ipynb  inference.py  judge.py  lediwi.code-workspace  lewidi2025.code-workspace  llm_judge.py  requirements.txt  run_inference.sh
aime/: format_dataset.ipynb
lewidi_lib/: pyproject.toml
lewidi_lib/src/: extract_gemini_preds.py  funcs.py  inference_lib.py  judge_lib.py  lewidi_lib.py  lewidi_org.py  lewidi_regression.py  lewidi_st_lib.py  metrics_plotter.py  prm800k.py  sbatch_lib.py  vllmserver.py
lewidi_lib/src/chats/: contrastive_traces.md
lewidi_lib/src/prompt_templates/: CSC_00.txt  CSC_01.txt  CSC_2.txt  CSC_3.txt  CSC_31.txt  CSC_32.txt  CSC_33.txt  CSC_4.txt  CSC_60.txt  CSC_62.txt  CSC_63.txt  MP_0.txt  MP_01.txt  MP_2.txt  MP_3.txt  MP_31.txt  MP_32.txt  MP_33.txt  MP_60.txt  MP_63.txt  Paraphrase_1.txt  Paraphrase_3.txt  Paraphrase_31.txt  Paraphrase_33.txt  Paraphrase_60.txt  Paraphrase_63.txt  VariErrNLI_01.txt  VariErrNLI_3.txt  VariErrNLI_31.txt  VariErrNLI_33.txt  VariErrNLI_60.txt  VariErrNLI_63.txt  __init__.py  judge_eval.txt  judge_ranking.txt  judge_verify_solution.txt  prm800k_31.txt  prm800k_60.txt  rate_prm800k.txt  reasoning_trace_eval.md  (+5 more)
lewidi_lib/src/regression_templates/: CSC_template.txt
notebook/: ablations.ipynb  chunked-prefill.ipynb  classification_metrics.ipynb  create_submission.ipynb  create_submissions.py  create_submissions_regression.py  diversity.ipynb  drop_definition.ipynb  explore.ipynb  explore2.ipynb  explore_32b.ipynb  explore_t60.ipynb  hyperparameters.ipynb  (+14 more)
(+78 files in other folders)
