[project]
name = "lewidi-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
    "pydantic-settings",
    "scipy",
    "duckdb",
    "json_repair",
    "aiohttp",
    "vllm",
    "pyarrow",
]

[project.scripts]
lewidi-plot = "metrics_plotter:main"
lewidi-sbatch-progress = "sbatch_lib:main"
lewidi-extract-gemini-preds = "extract_gemini_preds:main"
lewidi-datasets-sizes = "lewidi_lib:get_datasets_sizes"